--- a/SpringBoot/ex3/src/main/resources/templates/sample/ex2.html
+++ b/SpringBoot/ex3/src/main/resources/templates/sample/ex2.html
@@ -7,12 +7,24 @@
 <body>
 <h1 th:text="${'EX2'}"></h1>
 
+<style>
+    .red {
+        background-color: red;
+    }
+</style>
 <ul>
-  <li th:each="dto, status : ${list}">
-    [[${status.index}]] ----------- [[${dto}]]
-    <span th:if="${dto.sno % 5 == 0}" th:text="${'------------------' + dto.sno}"></span>
-    <span th:unless="${dto.sno % 5 == 0}" th:text="${dto.first}"></span>
-  </li>
+    <th:block th:each="dto: ${list}">
+        <li>
+            <a th:href="@{'/ex4/' + (first=${dto.sno})}">[[${dto}]]</a>
+            <h3 th:text="${#temporals.format(dto.regTime, 'yyyy/MM/dd')}"></h3>
+        </li>
+    </th:block>
 </ul>
+
+<!--<li th:each="dto, status : ${list}">
+    &lt;!&ndash;<span th:if="${dto.sno % 5 == 0}" th:text="${'&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;' + dto.sno}"></span>
+    <span th:unless="${dto.sno % 5 == 0}" th:text="${dto.first}"></span>&ndash;&gt;
+    <span th:class="${dto.sno % 5==0}? 'red'">[[${dto}]]</span>
+</li>-->
 </body>
 </html>
